spade-tests/src/snapshots/spade_tests__typeinference__type_error_on_registers_are_useful.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type int<8>, got int<10>
  ┌─ testinput:8:28
  │
8 │         let rest: int<8> = shift_clock >> 2;
  │                            ^^^^^^^^^^^^^^^^ Expected int<8> here


